...
              "Describe your experience",
              _reviewData.comment,
              setReviewComment,
              DescriptionFieldValidator.validate),
        ),
        FlatButton(
          child: Text("Submit", style: textButtonStyle),
          color: mainAppColor,
          shape: roundedBorder,
          minWidth: double.infinity,
          onPressed: submitReview,
        ),
      ],
...
            TextButton(
                child: Text('No'),
                onPressed: () {
                  Navigator.of(context).pop();
                }),
            TextButton(
                child: Text('Yes'),
                onPressed: () {
                  deleteReview();
                  Navigator.of(context).pop();
                }),
          ],
        );
...
